# ALIA-demo-admin

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: config.py  conftest.py  main.py  mlflow_tracer.py  mlflow_tracker.py
backend/comparador/: __init__.py  config.py  router.py
backend/comparador/tests/: test_router.py
backend/feedback/: __init__.py  expectations.py  router.py  schemas.py
backend/feedback/tests/: test_expectations.py  test_feedback_router.py  test_integration_mlflow.py
backend/inference_logger/: __init__.py  middleware.py  models.py  router.py  service.py
backend/mlflow_dashboard/: __init__.py  router.py  schemas.py
backend/prompt_registry/: bootstrap.py  cache.py  fallback.py  provider.py
backend/rag_tramites/: __init__.py  indexer.py  retriever.py  vector_store.py
backend/rag_tramites_eval/: __init__.py  catalog.py  scorers.py  seed_queries.py
backend/tab1_chatbot/: graph.py  router.py
backend/tab2_react_agent/: graph.py  ingest.py  ingest_web.py  rag_tools.py  router.py
backend/tab2bis_rag/: graph.py  router.py
backend/tests/: test_config.py  test_mlflow_tracker.py  test_no_legacy_config.py
docker/: README.md  docker-compose.dev.yml  docker-compose.pre.yml  docker-compose.pro.yml
docs/: ejemplo.txt
frontend/: app.py  eval_app.py
frontend/components/: __init__.py  feedback_widget.py
frontend/tests/: test_eval_app.py
scripts/: bootstrap_eval_dataset.py  build_eval_dataset.py  run_evaluation.py  run_tramites_eval.py
(+28 files in other folders)
