[project]
name = "ujaenagent"
version = "1.0.0"
description = "Asistente conversacional sobre el catálogo de trámites municipales de la Diputación de Córdoba (1091 trámites, 128 municipios) con modelos de lenguaje locales."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.5",
    "fastapi>=0.135.1",
    "gradio>=6.9.0",
    "httpx>=0.28.1",
    "langchain>=1.2.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.0",
    "mlflow>=3.0",
    "playwright>=1.58.0",
    "pydantic-settings>=2.0",
    "pypdf>=6.8.0",
    "python-dotenv>=1.2.2",
    "python-slugify>=8.0",
    "sentence-transformers>=5.2.3",
    "sse-starlette>=3.3.2",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.7",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests que requieren MLflow real (docker-compose up).",
]
